--- a/Pandas Profiling.ipynb
+++ b/Pandas Profiling.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dad1c51b",
+   "metadata": {},
+   "source": [
+    "#                                            Pandas Profiling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c092b5c",
+   "metadata": {},
+   "source": [
+    "install pandas profiling module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a40f0f96",
@@ -16,41 +32,41 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas-profiling in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (3.3.0)\n",
-      "Requirement already satisfied: tangled-up-in-unicode==0.2.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.2.0)\n",
-      "Requirement already satisfied: htmlmin==0.1.12 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.1.12)\n",
-      "Requirement already satisfied: pandas!=1.4.0,<1.5,>1.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.4.2)\n",
-      "Requirement already satisfied: requests<2.29,>=2.24.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (2.27.1)\n",
-      "Requirement already satisfied: joblib~=1.1.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.1.0)\n",
+      "Requirement already satisfied: PyYAML<6.1,>=5.0.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (6.0)\n",
+      "Requirement already satisfied: multimethod<1.9,>=1.4 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.8)\n",
+      "Requirement already satisfied: scipy<1.10,>=1.4.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.9.1)\n",
       "Requirement already satisfied: phik<0.13,>=0.11.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.12.2)\n",
+      "Requirement already satisfied: jinja2<3.2,>=2.11.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (3.0.3)\n",
+      "Requirement already satisfied: htmlmin==0.1.12 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.1.12)\n",
+      "Requirement already satisfied: joblib~=1.1.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.1.0)\n",
+      "Requirement already satisfied: pydantic<1.10,>=1.8.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.9.2)\n",
+      "Requirement already satisfied: visions[type_image_path]==0.7.5 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.7.5)\n",
+      "Requirement already satisfied: missingno<0.6,>=0.4.2 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.4.2)\n",
+      "Requirement already satisfied: requests<2.29,>=2.24.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (2.27.1)\n",
       "Requirement already satisfied: matplotlib<3.6,>=3.2 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (3.5.1)\n",
       "Requirement already satisfied: statsmodels<0.14,>=0.13.2 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.13.2)\n",
-      "Requirement already satisfied: missingno<0.6,>=0.4.2 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.4.2)\n",
-      "Requirement already satisfied: numpy<1.24,>=1.16.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.21.5)\n",
+      "Requirement already satisfied: tangled-up-in-unicode==0.2.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.2.0)\n",
       "Requirement already satisfied: tqdm<4.65,>=4.48.2 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (4.64.0)\n",
-      "Requirement already satisfied: visions[type_image_path]==0.7.5 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.7.5)\n",
-      "Requirement already satisfied: multimethod<1.9,>=1.4 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.8)\n",
-      "Requirement already satisfied: jinja2<3.2,>=2.11.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (3.0.3)\n",
-      "Requirement already satisfied: scipy<1.10,>=1.4.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.9.1)\n",
-      "Requirement already satisfied: pydantic<1.10,>=1.8.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.9.2)\n",
-      "Requirement already satisfied: PyYAML<6.1,>=5.0.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (6.0)\n",
+      "Requirement already satisfied: numpy<1.24,>=1.16.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.21.5)\n",
       "Requirement already satisfied: seaborn<0.12,>=0.10.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (0.11.2)\n",
+      "Requirement already satisfied: pandas!=1.4.0,<1.5,>1.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas-profiling) (1.4.2)\n",
       "Requirement already satisfied: attrs>=19.3.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from visions[type_image_path]==0.7.5->pandas-profiling) (21.4.0)\n",
       "Requirement already satisfied: networkx>=2.4 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from visions[type_image_path]==0.7.5->pandas-profiling) (2.7.1)\n",
       "Requirement already satisfied: Pillow in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from visions[type_image_path]==0.7.5->pandas-profiling) (9.0.1)\n",
       "Requirement already satisfied: imagehash in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from visions[type_image_path]==0.7.5->pandas-profiling) (4.3.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from jinja2<3.2,>=2.11.1->pandas-profiling) (2.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (4.25.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (1.3.2)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (3.0.4)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (21.3)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (4.25.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (1.3.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from matplotlib<3.6,>=3.2->pandas-profiling) (3.0.4)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pandas!=1.4.0,<1.5,>1.1->pandas-profiling) (2021.3)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from pydantic<1.10,>=1.8.1->pandas-profiling) (4.1.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib<3.6,>=3.2->pandas-profiling) (1.16.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from requests<2.29,>=2.24.0->pandas-profiling) (3.3)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from requests<2.29,>=2.24.0->pandas-profiling) (2021.10.8)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from requests<2.29,>=2.24.0->pandas-profiling) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from requests<2.29,>=2.24.0->pandas-profiling) (3.3)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from requests<2.29,>=2.24.0->pandas-profiling) (1.26.9)\n",
       "Requirement already satisfied: patsy>=0.5.2 in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from statsmodels<0.14,>=0.13.2->pandas-profiling) (0.5.2)\n",
       "Requirement already satisfied: colorama in c:\\users\\subhajit\\anaconda3\\lib\\site-packages (from tqdm<4.65,>=4.48.2->pandas-profiling) (0.4.4)\n",
@@ -155,8 +171,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "713d1939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li=[71,25,[21,[31,41]]]\n",
+    "li[2][1][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d6a52770",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[71, 25, [21, [31, 41]]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "163ba692",
    "metadata": {},
    "outputs": [],
    "source": []
